7-kubernetes/task6-access/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: netology-learn
spec:
  type: NodePort
  selector:
    aynur: configmap
  ports:
    - name: web-nodeport
      protocol: TCP
      port: 80
      nodePort: 30080
